# cteam

./: AGENTS.md  README.md  TODO-PLAN.txt  cteam.py  oteam.py  pyproject.toml
oh/: AGENTS.md  config.example.yml  oteam_openhands.py  oteam_openhands_trainyard.py
oteam_pkg/: __init__.py  __main__.py
oteam_pkg/cmd/: telegram.py  ticket_grab.py  ticket_grab_test.py
oteam_pkg/cmd/tickets/: __init__.py  list.py  list_test.py
oteam_pkg/coord/: activity.py  activity_test.py  broadcast.py  broadcast_test.py  file_history.py  file_history_test.py  stream.py
oteam_pkg/ctx/: inject.py  inject_test.py
oteam_pkg/ctx/templates/: ticket_context.md
oteam_pkg/hooks/: post-receive  post-update
oteam_pkg/safety/: pre_push.py  pre_push_test.py  stuck.py
oteam_pkg/state/: __init__.py  tickets.py  tickets_test.py
oteam_pkg/templates/: concierge.md
oteam_pkg/tg_bot/: adapter.py  bot.py  formatter.py  keyboard.py  telegram_test.py
oteam_pkg/tmux/: detect_mode.py  detect_mode_test.py  send_keys.py  send_keys_test.py
oteam_test/: oteam.json
oteam_test/.oteam/runtime/: tickets.db
oteam_test/agents/dev1/: STATUS.md
oteam_test/shared/: MESSAGES.log.md
tests/: __init__.py  test_cteam.py  test_oteam.py
